crates/biome_cli/tests/snapshots/main_commands_lint/linter_shows_the_default_severity_of_rule_on.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file1.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "style": {
        "noVar": "on"
      }
    }
  }
}
```

## `file1.js`

```js
var name = 'tobias'
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
biome.json:5:17 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Found an unknown key `noVar`.
  
    3 │         "rules": {
    4 │             "style": {
  > 5 │                 "noVar": "on"
      │                 ^^^^^^^
    6 │             }
    7 │         }
  
  i Known keys:
  
  - recommended
  - preset
  - noCommonJs
  - noContinue
  - noDefaultExport
  - noDescendingSpecificity
  - noDoneCallback
  - noEnum
  - noExcessiveClassesPerFile
  - noExcessiveLinesPerFile
  - noExportedImports
  - noHeadElement
  - noHexColors
  - noImplicitBoolean
  - noIncrementDecrement
  - noInferrableTypes
  - noInlineStyles
  - noJsxLiterals
  - noMagicNumbers
  - noMultiAssign
  - noMultilineString
  - noNamespace
  - noNegationElse
  - noNestedTernary
  - noNonNullAssertion
  - noParameterAssign
  - noParameterProperties
  - noPlaywrightElementHandle
  - noPlaywrightEval
  - noPlaywrightWaitForSelector
  - noProcessEnv
  - noReactNativeLiteralColors
  - noRestrictedGlobals
  - noRestrictedImports
  - noRestrictedTypes
  - noRootType
  - noShoutyConstants
  - noSubstr
  - noTernary
  - noTopLevelLiterals
  - noUnusedTemplateLiteral
  - noUselessElse
  - noValueAtRule
  - noVueOptionsApi
  - noYodaExpression
  - useArrayLiterals
  - useAsConstAssertion
  - useAtIndex
  - useBlockStatements
  - useCollapsedElseIf
  - useCollapsedIf
  - useComponentExportOnlyModules
  - useConsistentArrayType
  - useConsistentArrowReturn
  - useConsistentBuiltinInstantiation
  - useConsistentCurlyBraces
  - useConsistentEnumValueType
  - useConsistentGraphqlDescriptions
  - useConsistentMemberAccessibility
  - useConsistentMethodSignatures
  - useConsistentObjectDefinitions
  - useConsistentTestIt
  - useConsistentTypeDefinitions
  - useConst
  - useDefaultParameterLast
  - useDefaultSwitchClause
  - useDeprecatedReason
  - useDestructuring
  - useDomQuerySelector
  - useEnumInitializers
  - useErrorCause
  - useExplicitLengthCheck
  - useExponentiationOperator
  - useExportType
  - useExportsLast
  - useFilenamingConvention
  - useForOf
  - useFragmentSyntax
  - useGlobalThis
  - useGraphqlNamingConvention
  - useGroupedAccessorPairs
  - useImportType
  - useImportsFirst
  - useInputName
  - useLiteralEnumMembers
  - useLoneExecutableDefinition
  - useNamedCaptureGroup
  - useNamingConvention
  - useNodeAssertStrict
  - useNodejsImportProtocol
  - useNumberNamespace
  - useNumericSeparators
  - useObjectSpread
  - useReactFunctionComponents
  - useReadonlyClassProperties
  - useReduceTypeParameter
  - useSelfClosingElements
  - useShorthandAssign
  - useShorthandFunctionType
  - useSingleVarDeclarator
  - useSpreadOverApply
  - useSymbolDescription
  - useTemplate
  - useTestHooksInOrder
  - useTestHooksOnTop
  - useThisInClassMethods
  - useThrowNewError
  - useThrowOnlyError
  - useTrimStartEnd
  - useUnicodeRegex
  - useUnifiedTypeSignatures
  - useVarsOnTop
  - useVueConsistentDefinePropsDeclaration
  - useVueConsistentVBindStyle
  - useVueConsistentVOnStyle
  - useVueDefineMacrosOrder
  - useVueHyphenatedAttributes
  - useVueMultiWordComponentNames
  - useVueNextTickPromise
  

```
