crates/biome_cli/tests/snapshots/main_commands_lint/max_diagnostics_default.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `src/file_0.js`

```js
for(;true;);

```

## `src/file_1.js`

```js
for(;true;);

```

## `src/file_10.js`

```js
for(;true;);

```

## `src/file_11.js`

```js
for(;true;);

```

## `src/file_12.js`

```js
for(;true;);

```

## `src/file_13.js`

```js
for(;true;);

```

## `src/file_14.js`

```js
for(;true;);

```

## `src/file_15.js`

```js
for(;true;);

```

## `src/file_16.js`

```js
for(;true;);

```

## `src/file_17.js`

```js
for(;true;);

```

## `src/file_18.js`

```js
for(;true;);

```

## `src/file_19.js`

```js
for(;true;);

```

## `src/file_2.js`

```js
for(;true;);

```

## `src/file_20.js`

```js
for(;true;);

```

## `src/file_21.js`

```js
for(;true;);

```

## `src/file_22.js`

```js
for(;true;);

```

## `src/file_23.js`

```js
for(;true;);

```

## `src/file_24.js`

```js
for(;true;);

```

## `src/file_25.js`

```js
for(;true;);

```

## `src/file_26.js`

```js
for(;true;);

```

## `src/file_27.js`

```js
for(;true;);

```

## `src/file_28.js`

```js
for(;true;);

```

## `src/file_29.js`

```js
for(;true;);

```

## `src/file_3.js`

```js
for(;true;);

```

## `src/file_30.js`

```js
for(;true;);

```

## `src/file_31.js`

```js
for(;true;);

```

## `src/file_32.js`

```js
for(;true;);

```

## `src/file_33.js`

```js
for(;true;);

```

## `src/file_34.js`

```js
for(;true;);

```

## `src/file_35.js`

```js
for(;true;);

```

## `src/file_36.js`

```js
for(;true;);

```

## `src/file_37.js`

```js
for(;true;);

```

## `src/file_38.js`

```js
for(;true;);

```

## `src/file_39.js`

```js
for(;true;);

```

## `src/file_4.js`

```js
for(;true;);

```

## `src/file_5.js`

```js
for(;true;);

```

## `src/file_6.js`

```js
for(;true;);

```

## `src/file_7.js`

```js
for(;true;);

```

## `src/file_8.js`

```js
for(;true;);

```

## `src/file_9.js`

```js
for(;true;);

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
The number of diagnostics exceeds the number allowed by Biome.
Diagnostics not shown: 60.
```

```block
Checked 40 file(s) in <TIME>
```


