crates/biome_cli/tests/snapshots/main_commands_lint/missing_plugins_report_their_paths.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.js
```

## `biome.json`

```json
{
  "plugins": ["missingOne.grit", "missingTwo.grit"]
}
```

## `file.js`

```js
debugger

```

# Termination Message

```block
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Error(s) during loading of plugins:
    Failed to read plugin file missingOne.grit
    Failed to read plugin file missingTwo.grit
  


```
