crates/biome_cli/tests/snapshots/main_commands_lint/no_lint_when_file_is_ignored.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write test.js
```

## `biome.json`

```json
{ "linter": { "includes": ["**", "!test.js"] } }
```

## `test.js`

```js
(1 >= -0)
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - test.js
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
